--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,30 +1,30 @@
-input.form-control {
+.header input.form-control {
   width: 20rem !important;
   border-radius: 15px 0px 0px 15px !important;
 }
-nav {
-  font-family: "Work Sans", sans-serif !important;
-  font-weight: 700;
+.header nav {
+  font-family: "Inter", sans-serif !important;
+  font-weight: 500;
   font-size: 15px;
   letter-spacing: 1px;
 }
-.nav-item:hover {
-  background-color: #20C1BD;
+.header .nav-item:hover {
+  background-color: rgb(32, 193, 189, .5);
   border-radius: 5px;
-  transition: ease-in-out 200ms;
+  transition: ease-in-out 500ms;
 }
 
-.nav-item:hover a {
+.header .nav-item:hover a {
   color: white !important;
+  font-weight: 500;
 }
-a {
+.header a {
   color: #20C1BD !important;
 }
-.btn {
+.header .btn {
   background-color: #20C1BD;
 }
-.input-group-append .btn{
+.header .input-group-append .btn{
     border-radius: 0px 15px 15px 0px !important;
 
 }
-@import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
