--- a/frontend/src/components/Home/SectionCard.css
+++ b/frontend/src/components/Home/SectionCard.css
@@ -32,4 +32,16 @@
   transform: translateX(2);
   transition: opacity 0.7s ease-out, transform 0.35s ease-out;
   margin-top: 35% !important;
+  color: aliceblue;
+  border: 1px solid white;
+  font-weight: 600;
+}
+
+.sectionCard .card:hover .btn:hover {
+  background-color: white;
+  color: black;
+}
+
+h1{
+  font-family: 'Work Sans', sans-serif;
 }
