tried userstay after reload

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header input.form-control {
-  width: 20rem !important;
+  width: 80% !important;
   border-radius: 15px 0px 0px 15px !important;
 }
 .header nav {
