--- a/frontend/src/components/Admin/Dashboard.css
+++ b/frontend/src/components/Admin/Dashboard.css
@@ -429,8 +429,8 @@ Copyright (c) 2015 Daniel Eden
     .ps {
       overflow: auto !important; } }
   
-  .btn,
-  .navbar .navbar-nav > a.btn {
+  .dashboard .btn,
+  .dashboard .navbar .navbar-nav >.dashboard a.btn {
     border-width: 2px;
     font-weight: 600;
     font-size: 0.8571em;
