--- a/frontend/src/components/Marketplace/Marketplace.css
+++ b/frontend/src/components/Marketplace/Marketplace.css
@@ -73,7 +73,7 @@
     padding: 0;
     margin: 0
 }
-
+/* 
 @media(min-width:991px) {
     .marketplace .navbar-nav {
         margin-left: 35%
@@ -97,8 +97,8 @@
     .marketplace #mobile-filter {
         display: none
     }
-}
-
+} */
+/* 
 @media(min-width:768px) and (max-width:991px) {
     .marketplace .navbar-nav {
         margin-left: 20%
@@ -212,4 +212,4 @@
     .marketplace #mobile-filter {
         padding: 10px
     }
-}
+} */
