--- a/frontend/src/components/Marketplace/Marketplace.css
+++ b/frontend/src/components/Marketplace/Marketplace.css
@@ -97,6 +97,12 @@
     margin: 0
 }
 
+.marketplace .favorite-btn:focus{
+    background-color: white;
+    color:red;
+    border: 1px solid red;
+}
+
 /* 
 @media(min-width:991px) {
     .marketplace .navbar-nav {
