--- a/frontend/src/components/Marketplace/ProductDetails.css
+++ b/frontend/src/components/Marketplace/ProductDetails.css
@@ -8,6 +8,18 @@
   border-radius: 5px;
 }
 
+.comment{
+  margin: 20px 0;
+}
+
+.mvright{
+  margin-left: 70%;
+  text-align: right;
+  opacity: 60%;
+  /* border: 1px solid black; */
+  
+}
+
 .product .preview {
   /* margin: 5px; */
   display: -webkit-box;
