created bid, bid button and recycle orders corrected

--- a/frontend/src/components/Marketplace/Marketplace.css
+++ b/frontend/src/components/Marketplace/Marketplace.css
@@ -97,7 +97,7 @@
     margin: 0
 }
 
-.marketplace .favorite-btn:focus{
+.favorite-btn:focus{
     background-color: white;
     color:red;
     border: 1px solid red;
