--- a/frontend/src/components/Marketplace/ProductDetails.css
+++ b/frontend/src/components/Marketplace/ProductDetails.css
@@ -100,7 +100,7 @@
 }
 
 @media screen and (min-width: 997px) {
-  .wrapper {
+  .product .wrapper {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
