Product List shown in Admin Panel

--- a/frontend/src/components/Admin/Dashboard.css
+++ b/frontend/src/components/Admin/Dashboard.css
@@ -1,4 +1,4 @@
-body {
+.admin-dash body {
   /* color: #797979;
   background: #f1f2f7;
   font-family: "Open Sans", sans-serif;
@@ -10,12 +10,12 @@ body {
   -moz-font-smoothing: antialiased; */
 }
 
-.profile-nav,
-.profile-info {
+.admin-dash .profile-nav,
+.admin-dash .profile-info {
   margin-top: 30px;
 }
 
-.profile-nav .user-heading {
+.admin-dash .profile-nav .user-heading {
     background-color: rgb(32, 193, 189, .8);
     color: #fff;
   border-radius: 4px 4px 0 0;
@@ -24,52 +24,52 @@ body {
   text-align: center;
 }
 
-.profile-nav .user-heading.round a {
+.admin-dash .profile-nav .user-heading.round a {
   border-radius: 50%;
   -webkit-border-radius: 50%;
   border: 10px solid rgba(255, 255, 255, 0.3);
   display: inline-block;
 }
 
-.profile-nav .user-heading a img {
+.admin-dash .profile-nav .user-heading a img {
   width: 112px;
   height: 112px;
   border-radius: 50%;
   -webkit-border-radius: 50%;
 }
 
-.profile-nav .user-heading h1 {
+.admin-dash .profile-nav .user-heading h1 {
   font-size: 22px;
   font-weight: 300;
   margin-bottom: 5px;
 }
 
-.profile-nav .user-heading p {
+.admin-dash .profile-nav .user-heading p {
   font-size: 12px;
 }
 
-.profile-nav ul {
+.admin-dash .profile-nav ul {
   margin-top: 1px;
 }
 
-.profile-nav ul > li {
+.admin-dash .profile-nav ul > li {
   border-bottom: 1px solid #ebeae6;
   margin-top: 0;
   line-height: 30px;
 }
 
-.profile-nav ul > li:last-child {
+.admin-dash .profile-nav ul > li:last-child {
   border-bottom: none;
 }
 
-.profile-nav ul > li > a {
+.admin-dash .profile-nav ul > li > a {
   border-radius: 0;
   -webkit-border-radius: 0;
   color: #89817f;
   border-left: 5px solid #fff;
 }
 
-.profile-nav ul > li > a:hover,
+.admin-dash .profile-nav ul > li > a:hover,
 .profile-nav ul > li > a:focus,
 .profile-nav ul li.active a {
   background: #f8f7f5 !important;
@@ -77,23 +77,23 @@ body {
   color: #89817f !important;
 }
 
-.profile-nav ul > li:last-child > a:last-child {
+.admin-dash .profile-nav ul > li:last-child > a:last-child {
   border-radius: 0 0 4px 4px;
   -webkit-border-radius: 0 0 4px 4px;
 }
 
-.profile-nav ul > li > a > i {
+.admin-dash .profile-nav ul > li > a > i {
   font-size: 16px;
   padding-right: 10px;
   color: #bcb3aa;
 }
 
-.r-activity {
+.admin-dash .r-activity {
   margin: 6px 0 0;
   font-size: 12px;
 }
 
-.p-text-area,
+.admin-dash .p-text-area,
 .p-text-area:focus {
   border: none;
   font-weight: 300;
@@ -102,16 +102,16 @@ body {
   font-size: 16px;
 }
 
-.profile-info .panel-footer {
+.admin-dash .profile-info .panel-footer {
   background-color: #f8f7f5;
   border-top: 1px solid #e7ebee;
 }
 
-.profile-info .panel-footer ul li a {
+.admin-dash .profile-info .panel-footer ul li a {
   color: #7a7a7a;
 }
 
-.bio-graph-heading {
+.admin-dash .bio-graph-heading {
     background-color: rgb(32, 193, 189);
     color: #fff;
   text-align: center;
@@ -123,142 +123,142 @@ body {
   font-weight: 300;
 }
 
-.bio-graph-info {
+.admin-dash .bio-graph-info {
   color: #89817e;
 }
 
-.bio-graph-info h1 {
+.admin-dash .bio-graph-info h1 {
   font-size: 22px;
   font-weight: 300;
   margin: 0 0 20px;
 }
 
-.bio-row {
+.admin-dash .bio-row {
   width: 50%;
   float: left;
   margin-bottom: 10px;
   padding: 0 15px;
 }
 
-.bio-row p span {
+.admin-dash .bio-row p span {
   width: 100px;
   display: inline-block;
 }
 
-.bio-chart,
+.admin-dash .bio-chart,
 .bio-desk {
   float: left;
 }
 
-.bio-chart {
+.admin-dash .bio-chart {
   width: 40%;
 }
 
-.bio-desk {
+.admin-dash .bio-desk {
   width: 60%;
 }
 
-.bio-desk h4 {
+.admin-dash .bio-desk h4 {
   font-size: 15px;
   font-weight: 400;
 }
 
-.bio-desk h4.terques {
+.admin-dash .bio-desk h4.terques {
   color: #4cc5cd;
 }
 
-.bio-desk h4.red {
+.admin-dash .bio-desk h4.red {
   color: #e26b7f;
 }
 
-.bio-desk h4.green {
+.admin-dash .bio-desk h4.green {
   color: #97be4b;
 }
 
-.bio-desk h4.purple {
+.admin-dash .bio-desk h4.purple {
   color: #caa3da;
 }
 
-.file-pos {
+.admin-dash .file-pos {
   margin: 6px 0 10px 0;
 }
 
-.profile-activity h5 {
+.admin-dash .profile-activity h5 {
   font-weight: 300;
   margin-top: 0;
   color: #c3c3c3;
 }
 
-.summary-head {
+.admin-dash .summary-head {
   background: #ee7272;
   color: #fff;
   text-align: center;
   border-bottom: 1px solid #ee7272;
 }
 
-.summary-head h4 {
+.admin-dash .summary-head h4 {
   font-weight: 300;
   text-transform: uppercase;
   margin-bottom: 5px;
 }
 
-.summary-head p {
+.admin-dash .summary-head p {
   color: rgba(255, 255, 255, 0.6);
 }
 
-ul.summary-list {
+.admin-dash ul.summary-list {
   display: inline-block;
   padding-left: 0;
   width: 100%;
   margin-bottom: 0;
 }
 
-ul.summary-list > li {
+.admin-dash ul.summary-list > li {
   display: inline-block;
   width: 19.5%;
   text-align: center;
 }
 
-ul.summary-list > li > a > i {
+.admin-dash ul.summary-list > li > a > i {
   display: block;
   font-size: 18px;
   padding-bottom: 5px;
 }
 
-ul.summary-list > li > a {
+.admin-dash ul.summary-list > li > a {
   padding: 10px 0;
   display: inline-block;
   color: #818181;
 }
 
-ul.summary-list > li {
+.admin-dash ul.summary-list > li {
   border-right: 1px solid #eaeaea;
 }
 
-ul.summary-list > li:last-child {
+.admin-dash ul.summary-list > li:last-child {
   border-right: none;
 }
 
-.activity {
+.admin-dash .activity {
   width: 100%;
   float: left;
   margin-bottom: 10px;
 }
 
-.activity.alt {
+.admin-dash .activity.alt {
   width: 100%;
   float: right;
   margin-bottom: 10px;
 }
 
-.activity span {
+.admin-dash .activity span {
   float: left;
 }
 
-.activity.alt span {
+.admin-dash .activity.alt span {
   float: right;
 }
-.activity span,
+.admin-dash .activity span,
 .activity.alt span {
   width: 45px;
   height: 45px;
@@ -271,46 +271,46 @@ ul.summary-list > li:last-child {
   font-size: 16px;
 }
 
-.activity.terques span {
+.admin-dash .activity.terques span {
   background: #8dd7d6;
 }
 
-.activity.terques h4 {
+.admin-dash .activity.terques h4 {
   color: #8dd7d6;
 }
-.activity.purple span {
+.admin-dash .activity.purple span {
   background: #b984dc;
 }
 
-.activity.purple h4 {
+.admin-dash .activity.purple h4 {
   color: #b984dc;
 }
-.activity.blue span {
+.admin-dash .activity.blue span {
   background: #90b4e6;
 }
 
-.activity.blue h4 {
+.admin-dash .activity.blue h4 {
   color: #90b4e6;
 }
-.activity.green span {
+.admin-dash .activity.green span {
   background: #aec785;
 }
 
-.activity.green h4 {
+.admin-dash .activity.green h4 {
   color: #aec785;
 }
 
-.activity h4 {
+.admin-dash .activity h4 {
   margin-top: 0;
   font-size: 16px;
 }
 
-.activity p {
+.admin-dash .activity p {
   margin-bottom: 0;
   font-size: 13px;
 }
 
-.activity .activity-desk i,
+.admin-dash .activity .activity-desk i,
 .activity.alt .activity-desk i {
   float: left;
   font-size: 18px;
@@ -318,30 +318,30 @@ ul.summary-list > li:last-child {
   color: #bebebe;
 }
 
-.activity .activity-desk {
+.admin-dash .activity .activity-desk {
   margin-left: 70px;
   position: relative;
 }
 
-.activity.alt .activity-desk {
+.admin-dash .activity.alt .activity-desk {
   margin-right: 70px;
   position: relative;
 }
 
-.activity.alt .activity-desk .panel {
+.admin-dash .activity.alt .activity-desk .panel {
   float: right;
   position: relative;
 }
 
-.activity-desk .panel {
+.admin-dash .activity-desk .panel {
   background: #f4f4f4;
   display: inline-block;
 }
 
-.activity .activity-desk .arrow {
+.admin-dash .activity .activity-desk .arrow {
   border-right: 8px solid #f4f4f4 !important;
 }
-.activity .activity-desk .arrow {
+.admin-dash .activity .activity-desk .arrow {
   border-bottom: 8px solid transparent;
   border-top: 8px solid transparent;
   display: block;
@@ -352,11 +352,11 @@ ul.summary-list > li:last-child {
   width: 0;
 }
 
-.activity-desk .arrow-alt {
+.admin-dash .activity-desk .arrow-alt {
   border-left: 8px solid #f4f4f4 !important;
 }
 
-.activity-desk .arrow-alt {
+.admin-dash .activity-desk .arrow-alt {
   border-bottom: 8px solid transparent;
   border-top: 8px solid transparent;
   display: block;
@@ -367,26 +367,26 @@ ul.summary-list > li:last-child {
   width: 0;
 }
 
-.activity-desk .album {
+.admin-dash .activity-desk .album {
   display: inline-block;
   margin-top: 10px;
 }
 
-.activity-desk .album a {
+.admin-dash .activity-desk .album a {
   margin-right: 10px;
 }
 
-.activity-desk .album a:last-child {
+.admin-dash .activity-desk .album a:last-child {
   margin-right: 0px;
 }
 
-.biochartDiv {
+.admin-dash .biochartDiv {
   display: inline;
   width: 100px;
   height: 100px;
 }
 
-.biochartInput {
+.admin-dash .biochartInput {
   width: 54px;
   height: 33px;
   position: absolute;
@@ -409,10 +409,10 @@ ul.summary-list > li:last-child {
 }
 
 
-.userAccount .active{
+.admin-dash .userAccount .active{
   background-color: white !important;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link{
+.admin-dash .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
   color: black;
 }
