--- a/frontend/src/components/Donation/Donate.css
+++ b/frontend/src/components/Donation/Donate.css
@@ -2,6 +2,12 @@
     margin: 20px 40%;
 }
 
+.donate .counterRowD{
+    background:linear-gradient(0deg, rgba(49, 49, 49, 0.747), rgba(49, 49, 49, 0.733)), url('../../assets/aid.jpg');
+    min-height: 300px;
+    
+}
+
 .center{
     text-align: center;
 }
